@@ -4,6 +4,7 @@ pictor (2.0ubuntu1) UNRELEASED; urgency=low
   * index.php:
     - quote href's
     - use htmlspecialchars judiciously
+    - deprecate weather and airport support (for now)
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 05 Feb 2010 16:32:15 -0800
 
